prometheus/resources/ingress.yaml
apiVersion: networking.k8s.io/v1  #networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /    
spec:
  rules:
    - http:
        paths:
        - path: /prometheus
          pathType: Prefix
          backend:
            service: 
              name: prometheus-k8s
              port: 
                number: 9090
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: grafana
              port: 
                number: 3000
